--- a/POC.html
+++ b/POC.html
@@ -1,4 +1,4 @@
-<iframe id="myFrame" src="https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"></iframe>
+<iframe id="myFrame" src="https://adservice.google.com/ddm/clk/408533097;208818505;l;;%3F//lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"></iframe>
 
 <p>URL Asli: <span id="realUrl">Loading...</span></p>
 
