--- a/POC.html
+++ b/POC.html
@@ -1,12 +1,8 @@
-<iframe id="myFrame" src="https://adservice.google.com/ddm/clk/408533097;208818505;l;;%3F//lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"></iframe>
-
-<p>URL Asli: <span id="realUrl">Loading...</span></p>
+<iframe id="myFrame" src="https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"></iframe>
 
 <script>
-  fetch("http://slh4b8t70zjl1j8g723vqswtkkqbgz6nv.oastify.com/get-iframe-url?url=" + encodeURIComponent(document.getElementById("myFrame").src))
-    .then(response => response.json())
-    .then(data => {
-      document.getElementById("realUrl").textContent = data.realUrl;
-    })
-    .catch(err => console.error("Gagal mendapatkan URL:", err));
+  setTimeout(() => {
+    let iframe = document.getElementById("myFrame");
+    console.log("Final URL:", iframe.src);
+  }, 2000);
 </script>
