--- a/POC.html
+++ b/POC.html
@@ -1,4 +1,4 @@
-<iframe id="myFrame" src="https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"></iframe>
+<iframe id="myFrame" src="http://business.google.com/website_shared/launch_bw.html?f=https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"></iframe>
 
 <script>
   setTimeout(() => {
