--- a/POC.html
+++ b/POC.html
@@ -1,8 +1,21 @@
-<iframe id="myFrame" src="https://adservice.google.com/ddm/clk/408533097;208818505;l;;%3F//lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"></iframe>
+<button onclick="getFinalUrl()">Buka & Ambil URL</button>
 
 <script>
-  setTimeout(() => {
-    let iframe = document.getElementById("myFrame");
-    console.log("Final URL:", iframe.src);
-  }, 2000);
+function getFinalUrl() {
+    // URL awal dari Google
+    let imageUrl = "https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu";
+
+    // Membuka gambar di tab baru
+    let newTab = window.open(imageUrl, "_blank");
+
+    // Tunggu beberapa detik lalu coba ambil URL final
+    setTimeout(() => {
+        try {
+            let finalUrl = newTab.location.href; // Ambil URL dari tab baru
+            console.log("Final URL:", finalUrl);
+        } catch (error) {
+            console.error("Tidak bisa mengambil URL karena CORS.");
+        }
+    }, 3000); // Tunggu 3 detik sebelum mencoba ambil URL
+}
 </script>
