--- a/POC.html
+++ b/POC.html
@@ -3,7 +3,7 @@
 <script>
 function getFinalUrl() {
     // URL awal dari Google
-    let imageUrl = "https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu";
+    let imageUrl = "https://adservice.google.com/ddm/clk/408533097;208818505;l;;%3F//lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu";
 
     // Membuka gambar di tab baru
     let newTab = window.open(imageUrl, "_blank");
