--- a/POC.html
+++ b/POC.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Ambil Final URL</title>
-</head>
-<body>
+  <head> </head>
+  <body>
     <button onclick="getFinalURL()">Get Final URL</button>
-    <p id="result"></p>
 
     <script>
-        function getFinalURL() {
-            var win = window.open("https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu");
+      function getFinalURL() {
+        let win = window.open(
+          "https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu",
+          "_blank"
+        );
 
-            setTimeout(() => {
-                try {
-                    const finalURL = win.location.href;
-                    win.location = "about:blank"; // Mengosongkan halaman
-                    document.getElementById("result").innerText = "Final URL: " + finalURL;
-                } catch (e) {
-                    document.getElementById("result").innerText = "Tidak bisa mengambil URL karena pembatasan keamanan.";
-                }
-            }, 3000); // Tunggu 3 detik sampai halaman redirect selesai
-        }
+        let checkUrl = setInterval(() => {
+          try {
+            console.log("Current URL:", win.location.href);
+          } catch (error) {
+            console.log("Tidak bisa akses URL, mungkin redirect ke domain lain.");
+            clearInterval(checkUrl);
+          }
+
+          if (win.closed) {
+            console.log("Tab ditutup.");
+            clearInterval(checkUrl);
+          }
+        }, 500);
+      }
     </script>
-</body>
+  </body>
 </html>
