--- a/POC.html
+++ b/POC.html
@@ -9,7 +9,7 @@
     <script>
       function getFinalURL() {
         let iframe = document.getElementById("myFrame");
-        iframe.src = "https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"<img src=x onerror=alert(9)>;
+        iframe.src = "https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu";
 
         setTimeout(() => {
           try {
