--- a/POC.html
+++ b/POC.html
@@ -1,23 +1,3 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <title>Intercept Redirect via Service Worker</title>
-</head>
-<body>
-    <button onclick="openURL()">Open URL</button>
-
-    <script>
-        // Daftarkan Service Worker
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('sw.js').then(() => {
-                console.log("Service Worker Registered!");
-            });
-        }
-
-        function openURL() {
-            window.open('/proxy?url=' + encodeURIComponent("https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu"), "_blank");
-        }
-    </script>
-</body>
-</html>
+<svg xmlns="http://www.w3.org/2000/svg">
+  <image href="https://lh3.google.com/u/0/d/1snA1SLGWmWh5GhDtIulL3Y5BY75CYfOyFiy__dbHgIA=w5000-h5000-p-k-nu" width="100" height="100"/>
+</svg>
